# Zap2

./: .dockerignore  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/chat/: consumers.py  models.py  permissions.py  routing.py  serializers.py  urls.py  views.py
backend/chat/migrations/: 0001_initial.py  0002_alter_message_content_media.py  0003_messagemedia_delete_media.py  0004_chatroom_avatar_img_chatroom_description_and_more.py  0005_chatroom_is_dm.py  0006_alter_chatroom_avatar_img_alter_profile_avatar_img.py  0007_membership_is_admin.py  0008_messagereaction.py  0009_chatroominvitation.py
backend/chat/utils/: image.py
backend/core/: asgi.py  settings.py  urls.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  tsconfig.json  vite.config.js
frontend/src/: App.tsx  emoji-picker-custom-theme.css  theme.ts
frontend/src/api/: index.ts  types.ts
frontend/src/components/: chat_area.tsx  image_crop_editor.tsx  message.tsx  message_input.tsx  message_input_actions.tsx  message_list.tsx  room_list_item.tsx  sidebar.tsx  styled.tsx  user_profile_dialog.tsx
frontend/src/components/dialog/: chat_group_details_dialog.tsx  common.ts  join_room_dialog.tsx  reactions_dialog.tsx  user_profile_dialog.tsx
frontend/src/components/message/: image_viewer.tsx  index.tsx  media_grid.tsx  reactions_display.tsx
frontend/src/components/message_input/: file_preview.tsx  index.tsx  input_actions.tsx  media_preview.tsx
frontend/src/helpers/: format.ts
frontend/src/pages/: authentication.tsx  chat.tsx
